# K5

./: CMakeLists.txt  FileManager.cpp  FileManager.h  Task.cpp  Task.h  TaskList.cpp  TaskList.h  main.cpp  manager_zada4 — ярлык.lnk  анализ и отчет.docx
